add locale in publications and publication category

--- a/src/Template/cup/page/form.twig
+++ b/src/Template/cup/page/form.twig
@@ -25,7 +25,7 @@
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" data-toggle="pill" href="#other" role="tab">
-                                        {{ 'Дополнительно'|locale }}
+                                        {{ 'Другое'|locale }}
                                     </a>
                                 </li>
                             </ul>
