--- a/src/Template/cup/publication/index.twig
+++ b/src/Template/cup/publication/index.twig
@@ -4,7 +4,7 @@
     <div class="page-inner py-5">
         <div class="d-flex align-items-left align-items-md-center flex-column flex-md-row">
             <div>
-                <h2 class="text-white pb-2 fw-bold">Список публикаций ({{ publications.count() }})</h2>
+                <h2 class="text-white pb-2 fw-bold">{{ 'Список публикаций'|locale }} ({{ publications.count() }})</h2>
             </div>
         </div>
     </div>
@@ -18,7 +18,7 @@
                     <div class="d-flex align-items-center">
                         <a href="/cup/publication/add" class="btn btn-primary btn-round ml-auto">
                             <i class="fa fa-plus"></i>
-                            Добавить публикацию
+                            {{ 'Создать публикацию'|locale }}
                         </a>
                     </div>
                 </div>
@@ -26,10 +26,10 @@
                     {% embed 'mixin/datatable.twig' %}
                         {% block thead %}
                             <tr>
-                                <th>Заголовок</th>
-                                <th width="20%">Категория</th>
-                                <th width="15%" class="d-none d-md-table-cell">Автор</th>
-                                <th width="15%" class="d-none d-md-table-cell">Дата публикации</th>
+                                <th>{{ 'Заголовок'|locale }}</th>
+                                <th width="20%">{{ 'Категория'|locale }}</th>
+                                <th width="15%" class="d-none d-md-table-cell">{{ 'Автор'|locale }}</th>
+                                <th width="15%" class="d-none d-md-table-cell">{{ 'Дата публикации'|locale }}</th>
                                 <th width="25%" class="text-right"></th>
                             </tr>
                         {% endblock %}
@@ -42,15 +42,15 @@
                                     <td width="15%" class="d-none d-md-table-cell">{{ item.user.getName('short') }}</td>
                                     <td width="15%" class="d-none d-md-table-cell">{{ item.date|df('d.m.Y H:i') }}</td>
                                     <td width="25%" class="text-right">
-                                        <form action="/cup/publication/{{ item.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('Вы действительно хотите удалить публикацию?');">
+                                        <form action="/cup/publication/{{ item.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('{{ 'Вы действительно хотите удалить публикацию?'|locale }}');">
                                             <div class="btn-group">
                                                 <a href="/cup/publication/{{ item.uuid }}/edit" class="btn btn-sm btn-info">
                                                     <i class="fas fa-fw fa-edit"></i>
-                                                    <span class="d-none d-md-inline-block">Изменить</span>
+                                                    <span class="d-none d-md-inline-block">{{ 'Изменить'|locale }}</span>
                                                 </a>
                                                 <button type="submit" class="btn btn-sm btn-danger">
                                                     <i class="fas fa-fw fa-trash-alt"></i>
-                                                    <span class="d-none d-md-inline-block">Удалить</span>
+                                                    <span class="d-none d-md-inline-block">{{ 'Удалить'|locale }}</span>
                                                 </button>
                                             </div>
                                         </form>
