--- a/src/Template/cup/publication/category/index.twig
+++ b/src/Template/cup/publication/category/index.twig
@@ -4,7 +4,7 @@
     <div class="page-inner py-5">
         <div class="d-flex align-items-left align-items-md-center flex-column flex-md-row">
             <div>
-                <h2 class="text-white pb-2 fw-bold">Список категорий ({{ list.count() }})</h2>
+                <h2 class="text-white pb-2 fw-bold">{{ 'Список категорий'|locale }} ({{ list.count() }})</h2>
             </div>
         </div>
     </div>
@@ -18,7 +18,7 @@
                     <div class="d-flex align-items-center">
                         <a href="/cup/publication/category/add" class="btn btn-primary btn-round ml-auto">
                             <i class="fa fa-plus"></i>
-                            Добавить категорию
+                            {{ 'Создать категорию'|locale }}
                         </a>
                     </div>
                 </div>
@@ -26,10 +26,10 @@
                     {% embed 'mixin/datatable.twig' %}
                         {% block thead %}
                             <tr>
-                                <th>Название</th>
-                                <th width="25%">Категория</th>
-                                <th width="8%" class="d-none d-md-table-cell">Публичная</th>
-                                <th width="8%" class="d-none d-md-table-cell">Вложенные</th>
+                                <th>{{ 'Название'|locale }}</th>
+                                <th width="25%">{{ 'Категория'|locale }}</th>
+                                <th width="8%" class="d-none d-md-table-cell">{{ 'Публичная'|locale }}</th>
+                                <th width="8%" class="d-none d-md-table-cell">{{ 'Вложенные'|locale }}</th>
                                 <th width="25%" class="text-right"></th>
                             </tr>
                         {% endblock %}
@@ -46,15 +46,15 @@
                                         {{ item.children ? '<i class="fas fa-check"></i>' : '<i class="fas fa-times"></i>' }}
                                     </td>
                                     <td width="25%" class="text-right">
-                                        <form action="/cup/publication/category/{{ item.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('Вы действительно хотите удалить категорию публикаций?');">
+                                        <form action="/cup/publication/category/{{ item.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('{{ 'Вы действительно хотите удалить категорию публикаций?'|locale }}');">
                                             <div class="btn-group">
                                                 <a href="/cup/publication/category/{{ item.uuid }}/edit" class="btn btn-sm btn-info">
                                                     <i class="fas fa-fw fa-edit"></i>
-                                                    <span class="d-none d-md-inline-block">Изменить</span>
+                                                    <span class="d-none d-md-inline-block">{{ 'Изменить'|locale }}</span>
                                                 </a>
                                                 <button type="submit" class="btn btn-sm btn-danger">
                                                     <i class="fas fa-fw fa-trash-alt"></i>
-                                                    <span class="d-none d-md-inline-block">Удалить</span>
+                                                    <span class="d-none d-md-inline-block">{{ 'Удалить'|locale }}</span>
                                                 </button>
                                             </div>
                                         </form>
