--- a/src/Template/cup/publication/form.twig
+++ b/src/Template/cup/publication/form.twig
@@ -4,7 +4,7 @@
     <div class="page-inner py-5">
         <div class="d-flex align-items-left align-items-md-center flex-column flex-md-row">
             <div>
-                <h2 class="text-white pb-2 fw-bold">{{ publication.uuid ? 'Редактирование публикации' : 'Добавление новой публикации' }}</h2>
+                <h2 class="text-white pb-2 fw-bold">{{ (publication.uuid ? 'Редактирование публикации' : 'Создание новой публикации')|locale }}</h2>
             </div>
         </div>
     </div>
@@ -20,17 +20,17 @@
                             <ul class="nav nav-pills nav-secondary nav-pills-no-bd ml-auto" role="tablist">
                                 <li class="nav-item">
                                     <a class="nav-link active show" data-toggle="pill" href="#publication" role="tab">
-                                        Публикация
+                                        {{ 'Публикация'|locale }}
                                     </a>
                                 </li>
                                 {#<li class="nav-item">
                                     <a class="nav-link" data-toggle="pill" href="#poll" role="tab">
-                                        Опрос
+                                        {{ 'Опрос'|locale }}
                                     </a>
                                 </li>#}
                                 <li class="nav-item">
                                     <a class="nav-link" data-toggle="pill" href="#other" role="tab">
-                                        Дополнительно
+                                        {{ 'Другое'|locale }}
                                     </a>
                                 </li>
                             </ul>
@@ -44,10 +44,10 @@
                                 <div class="row">
                                     <div class="col-md-6">
                                         {% include 'cup/form.twig' with {
-                                            'label': 'Заголовок',
+                                            'label': 'Заголовок'|locale,
                                             'type': 'text',
                                             'name': 'title',
-                                            'postfix': '<i class="far fa-question-circle" data-toggle="tooltip" data-placement="top" title="Заголовок публикации обязателен к заполнению и может содержать не более 255 символов"></i>',
+                                            'postfix': '<i class="far fa-question-circle" data-toggle="tooltip" data-placement="top" title="' ~ ('Заголовок публикации обязателен к заполнению и может содержать не более 255 символов'|locale) ~ '"></i>',
                                             'args': {
                                                 'value': publication.title,
                                                 'required': true,
@@ -57,7 +57,7 @@
                                     </div>
                                     <div class="col-md-6">
                                         {% include 'cup/form.twig' with {
-                                            'label': 'Дата',
+                                            'label': 'Дата'|locale,
                                             'type': 'datetime',
                                             'name': 'date',
                                             'args': {
@@ -71,10 +71,10 @@
                                 <div class="row">
                                     <div class="col-md-6">
                                         {% include 'cup/form.twig' with {
-                                            'label': 'Категория',
+                                            'label': 'Категория'|locale,
                                             'type': 'select',
                                             'name': 'category',
-                                            'message': '<a href="/cup/publication/category/add" class="btn btn-xs btn-info float-right" onclick="return confirm(\'Вы действительно хотите перейти на другую страницу?\');"><i class="fa fa-plus"></i> Добавить категорию</a>',
+                                            'message': '<a href="/cup/publication/category/add" class="btn btn-xs btn-info float-right" onclick="return confirm(\'' ~ ('Вы действительно хотите перейти на другую страницу?'|locale) ~ '\');"><i class="fa fa-plus"></i> ' ~ ('Создать категорию'|locale) ~ '</a>',
                                             'args': {
                                                 'required': true,
                                                 'option': list.pluck('title', 'uuid').all(),
@@ -87,7 +87,7 @@
                                 <div class="row">
                                     <div class="col-md-12">
                                         {% include 'cup/editor.twig' with {
-                                            'label': 'Краткое содержимое',
+                                            'label': 'Краткое содержимое'|locale,
                                             'name': 'content[short]',
                                             'args': {
                                                 'value': publication.content.short
@@ -98,7 +98,7 @@
                                 <div class="row">
                                     <div class="col-md-12">
                                         {% include 'cup/editor.twig' with {
-                                            'label': 'Полное содержимое',
+                                            'label': 'Полное содержимое'|locale,
                                             'name': 'content[full]',
                                             'args': {
                                                 'value': publication.content.full
@@ -148,7 +148,7 @@
                                 <div class="row">
                                     <div class="col-md-6">
                                         {% include 'cup/form.twig' with {
-                                            'label': 'Адрес',
+                                            'label': 'Адрес'|locale,
                                             'type': 'text',
                                             'name': 'address',
                                             'prefix': base_url() ~ '/',
@@ -159,18 +159,16 @@
                                             }
                                         } %}
                                     </div>
-                                    <div class="row">
-                                        <div class="col-md-6">
-                                            {% include 'cup/form.twig' with {
-                                                'label': 'Внешний ID',
-                                                'type': 'text',
-                                                'name': 'external_id',
-                                                'postfix': '<i class="far fa-question-circle" data-toggle="tooltip" data-placement="top" title="Системное поле. Если вы не знаете, зачем это поле - лучше его не трогать."></i>',
-                                                'args': {
-                                                    'value': item.external_id,
-                                                }
-                                            } %}
-                                        </div>
+                                    <div class="col-md-6">
+                                        {% include 'cup/form.twig' with {
+                                            'label': 'Внешний ID'|locale,
+                                            'type': 'text',
+                                            'name': 'external_id',
+                                            'postfix': '<i class="far fa-question-circle" data-toggle="tooltip" data-placement="top" title="Системное поле. Если вы не знаете, зачем это поле - лучше его не трогать."></i>',
+                                            'args': {
+                                                'value': item.external_id,
+                                            }
+                                        } %}
                                     </div>
                                 </div>
 
@@ -183,7 +181,7 @@
                                 <div class="row">
                                     <div class="col-md-4">
                                         {% include 'cup/form.twig' with {
-                                            'label': 'Метатег Title',
+                                            'label': 'Метатег Title'|locale,
                                             'type': 'text',
                                             'name': 'meta[title]',
                                             'args': {
@@ -194,7 +192,7 @@
 
                                     <div class="col-md-4">
                                         {% include 'cup/form.twig' with {
-                                            'label': 'Метатег Description',
+                                            'label': 'Метатег Description'|locale,
                                             'type': 'text',
                                             'name': 'meta[description]',
                                             'args': {
@@ -205,7 +203,7 @@
 
                                     <div class="col-md-4">
                                         {% include 'cup/form.twig' with {
-                                            'label': 'Метатег Keywords',
+                                            'label': 'Метатег Keywords'|locale,
                                             'type': 'text',
                                             'name': 'meta[keywords]',
                                             'args': {
@@ -220,7 +218,7 @@
                     <div class="card-action">
                         {% include "cup/form-save.twig" %}
 
-                        <button type="button" data-click="preview" class="btn btn-info float-right">Предварительный просмотр</button>
+                        <button type="button" data-click="preview" class="btn btn-info float-right">{{ 'Предварительный просмотр'|locale }}</button>
                     </div>
                 </form>
             </div>
