simplecart update view type

--- a/src/Template/mixin/catalog.twig
+++ b/src/Template/mixin/catalog.twig
@@ -308,7 +308,7 @@
                                     }
                                 } else {
                                     // custom view
-                                    $column.html(column.view);
+                                    $column.html(typeof column.view === 'function' ? column.view(item) : column.view);
                                 }
 
                                 $row.append($column);
