--- a/src/Template/cup/page/form.twig
+++ b/src/Template/cup/page/form.twig
@@ -125,40 +125,7 @@
 
                                 <hr>
 
-                                <div class="row">
-                                    <div class="col-md-4">
-                                        {% include 'cup/form.twig' with {
-                                            'label': 'Метатег Title'|locale,
-                                            'type': 'text',
-                                            'name': 'meta[title]',
-                                            'args': {
-                                                'value': item.meta.title,
-                                            }
-                                        } %}
-                                    </div>
-
-                                    <div class="col-md-4">
-                                        {% include 'cup/form.twig' with {
-                                            'label': 'Метатег Description'|locale,
-                                            'type': 'text',
-                                            'name': 'meta[description]',
-                                            'args': {
-                                                'value': item.meta.description,
-                                            }
-                                        } %}
-                                    </div>
-
-                                    <div class="col-md-4">
-                                        {% include 'cup/form.twig' with {
-                                            'label': 'Метатег Keywords'|locale,
-                                            'type': 'text',
-                                            'name': 'meta[keywords]',
-                                            'args': {
-                                                'value': item.meta.keywords,
-                                            }
-                                        } %}
-                                    </div>
-                                </div>
+                                {% include "cup/form-meta.twig" with { 'entity': item } %}
                             </div>
                         </div>
                     </div>
