--- a/src/Template/cup/publication/category/form.twig
+++ b/src/Template/cup/publication/category/form.twig
@@ -140,44 +140,7 @@
                         <div class="row">
                             <div class="col-md-4">
                                 {% include 'cup/form.twig' with {
-                                    'label': 'Метатег Title'|locale,
-                                    'type': 'text',
-                                    'name': 'meta[title]',
-                                    'args': {
-                                        'value': item.meta.title,
-                                    }
-                                } %}
-                            </div>
-
-                            <div class="col-md-4">
-                                {% include 'cup/form.twig' with {
-                                    'label': 'Метатег Description'|locale,
-                                    'type': 'text',
-                                    'name': 'meta[description]',
-                                    'args': {
-                                        'value': item.meta.description,
-                                    }
-                                } %}
-                            </div>
-
-                            <div class="col-md-4">
-                                {% include 'cup/form.twig' with {
-                                    'label': 'Метатег Keywords'|locale,
-                                    'type': 'text',
-                                    'name': 'meta[keywords]',
-                                    'args': {
-                                        'value': item.meta.keywords,
-                                    }
-                                } %}
-                            </div>
-                        </div>
-
-                        <hr>
-
-                        <div class="row">
-                            <div class="col-md-4">
-                                {% include 'cup/form.twig' with {
-                                    'label': 'Шаблон для категории'|locale,
+                                    'label': 'Шаблон категории'|locale,
                                     'type': 'text',
                                     'name': 'template[list]',
                                     'postfix': '<i class="far fa-question-circle" data-toggle="tooltip" data-placement="top" data-html="true" title="' ~ ('Вы можете установить для данной категории отдельный шаблон или оставить <b>publication.list.twig</b>'|locale) ~ '"></i>',
@@ -211,6 +174,10 @@
                                 } %}
                             </div>
                         </div>
+
+                        <hr>
+
+                        {% include "cup/form-meta.twig" with { 'entity': item } %}
                     </div>
                     <div class="card-action">
                         {% include "cup/form-save.twig" %}
