add locale for catalog products & error message

--- a/src/Template/cup/layout.twig
+++ b/src/Template/cup/layout.twig
@@ -144,7 +144,7 @@
                                         <div class="col-md-12">
                                             <div class="card bg-danger">
                                                 <div class="card-header text-center">
-                                                    <h4 class="card-title text-white">{{ 'Обнаружены ошибки' }} ({{ _error|count }})</h4>
+                                                    <h4 class="card-title text-white">{{ 'Обнаружены ошибки'|locale }} ({{ _error|count }})</h4>
                                                     <p class="text-white my-0">
                                                         {% locale %}
                                                             В форме обнаружены ошибки, пожалуйста,
