transfer invoice template code to setup

--- a/src/Template/cup/catalog/order/index.twig
+++ b/src/Template/cup/catalog/order/index.twig
@@ -65,7 +65,7 @@
                                             'args': {
                                                 'id': 'code',
                                                 'text_mode': true,
-                                                'value': parameter('catalog_invoice', invoice),
+                                                'value': invoice,
                                             }
                                         } %}
 
